Added additional error checks
