# swagger.json
@@ -1112,6 +1112,35 @@
           }
         ]
       }
+    },
+    "/v1/loans/scheduled_transactions": {
+      "post": {
+        "operationId": "PeachBorrowerController_scheduleTransaction",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ScheduleTransactionDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "202": {
+            "description": ""
+          },
+          "404": {
+            "description": "PLAID_PAYMENT_INSTRUMENT_NOT_FOUND"
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
     }
   },
   "components": {
@@ -1766,6 +1795,22 @@
           "isOverdue",
           "overdueAmount",
           "obligations"
+        ]
+      },
+      "ScheduleTransactionDto": {
+        "type": "object",
+        "properties": {
+          "amount": {
+            "type": "number",
+            "minimum": 0.01
+          },
+          "scheduledDate": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "required": [
+          "amount"
         ]
       }
     },
